[gd_scene load_steps=5 format=3 uid="uid://dnn10y4hj7luu"]

[ext_resource type="Script" path="res://titleScreen.gd" id="1_x8pvu"]
[ext_resource type="VideoStream" path="res://Audio/Sequence_01.ogv" id="2_5auqq"]
[ext_resource type="AudioStream" uid="uid://dq1m0pkadx5go" path="res://Audio/Collin_PS2_Horror_Game_Take_1.mp3" id="3_hijgv"]
[ext_resource type="Texture2D" uid="uid://cr6i2nir6vde3" path="res://Credits.png" id="4_g6opc"]

[node name="Title" type="Node2D"]
script = ExtResource("1_x8pvu")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
offset_top = -6.0
offset_right = 1286.0
offset_bottom = 1018.0
scale = Vector2(0.252237, 0.252237)
stream = ExtResource("2_5auqq")
autoplay = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hijgv")

[node name="StartButton" type="Button" parent="."]
offset_left = 14.0
offset_top = 21.0
offset_right = 239.0
offset_bottom = 96.0
scale = Vector2(0.25, 0.25)

[node name="CreditsButton" type="Button" parent="."]
offset_left = 20.0
offset_top = 212.0
offset_right = 408.0
offset_bottom = 287.0
scale = Vector2(0.25, 0.25)

[node name="CreditsScreen" type="TextureRect" parent="."]
visible = false
offset_right = 1281.0
offset_bottom = 963.0
scale = Vector2(0.252, 0.252)
texture = ExtResource("4_g6opc")

[node name="ExitCreditsButton" type="Button" parent="CreditsScreen"]
visible = false
layout_mode = 0
offset_left = 1185.0
offset_top = 786.0
offset_right = 1260.0
offset_bottom = 835.0

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CreditsScreen/ExitCreditsButton" to="." method="_on_exit_credits_button_pressed"]
